# zinchi

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
